@@ -3,12 +3,14 @@
         "id": "9d2b6daf-7e82-43aa-b232-956d2d18c497",
         "studentID": "5e9c8c23-3f41-4fa0-9c10-4a97ccc1d905",
         "jobPostingID": "9d2b6daf-7e82-43aa-b232-956d2d18c497",
+        "resumeID": "496575c4-5d75-4e8e-90b0-9cdc77a57607",
         "coverLetter": null,
         "accepted": false,
         "application_date": "2021/10/28"
     },
     {
         "id": "9d2b6daf-7e82-43aa-b232-956d2d18c498",
+        "resumeID": "496575c4-5d75-4e8e-90b0-9cdc77a57609",
         "studentID": "5e9c8c23-3f41-4fa0-9c10-4a97ccc1d904",
         "jobPostingID": "9d2b6daf-7e82-43aa-b232-956d2d18c497",
         "coverLetter": "I am very interested in working for Software Docs Inc, I have multiple years of experience with all the required skills.",
