@@ -1,7 +1,7 @@
 [
     {
-        "ID": 1,
-        "studentID": 1,
+        "ID": "496575c4-5d75-4e8e-90b0-9cdc77a57607",
+        "studentID": "5e9c8c23-3f41-4fa0-9c10-4a97ccc1d905",
         "pastEduName": "University of South Carolina",
         "pastEduBegin": "2018-08-23",
         "pastEduEnd": "2022-05-23",
@@ -9,16 +9,16 @@
                 ["Entered data", "Assisted with customer support", "Assisted in development of website"]],
             ["Zaxbys", "Cashier", "2013-07-13", "2020-07-01", ["Took orders", "Cleaned"]]],
         "skills": ["CSS", "HTML", "Java", "PHP", "Javascript", "C++"],
-        "references": ["Gregory Leblanc", "Former general manager", "132-458-9301", "greglebanc@email.com"]
+        "references": [["Gregory Leblanc", "Former general manager", "132-458-9301", "greglebanc@email.com"]]
     },
     {
-        "ID": 2,
-        "studentID": 2,
+        "ID": "496575c4-5d75-4e8e-90b0-9cdc77a57609",
+        "studentID": "5e9c8c23-3f41-4fa0-9c10-4a97ccc1d904",
         "pastEduName": "University of South Carolina",
         "pastEduBegin": "2019-01-07",
         "pastEduEnd": "2024-12-13",
-        "experience": null,
+        "experience": [],
         "skills": ["Java", "C++", "C#", "Lua", "Python", "COBOL", "PostgreSQL"],
-        "references": ["Casey Cole", "Professor", "483-471-9017", "caseycole@email.com"]
+        "references": [["Casey Cole", "Professor", "483-471-9017", "caseycole@email.com"]]
     }
 ] 
