@@ -8,14 +8,14 @@ public class Experiences {
     public Date jobStartDate;
     public Date jobEndDate;
     public ArrayList<String> jobDuties;
-    public String jobTitle;
+    public String pastJobTitle;
     
-    public Experiences(String companyName, String jobTitle, Date jobStartDate, Date jobEndDate, ArrayList<String> jobDuties ) {
+    public Experiences(String companyName, String pastJobTitle, Date jobStartDate, Date jobEndDate, ArrayList<String> jobDuties ) {
         this.companyName = companyName;
         this.jobDuties = jobDuties;
         this.jobStartDate = jobStartDate;
         this.jobEndDate = jobEndDate;
-        this.jobTitle = jobTitle;
+        this.pastJobTitle = pastJobTitle;
     }
     
     public String toString(){
